=========
 History
=========

v0.3.2
======
* Fix scroll handlers for nav. bar. (`@sccolbert`_)
* Fix background color visibility behind rounding in code blocks. (`@kosiakk`_)

v0.3.1
======
* Re-add ``navbar_links`` theme option lost in bad merge. (`@newgene`_)
* Fixed display of sidebar. (`@adamcharnock`_, `@russell`_)

v0.3.0
======
* Add Bootstrap v3.0.0 with legacy option for v2.3.2. (`@MiCHiLU`_)

v0.2.9
======
* Add ``navbar_links`` theme option. (`@newgene`_)
* Add ``navbarextra`` block in "layout.html". (`@grncdr`_)

v0.2.8
======
* Sphinx compatible Sidebars. (`@russell`_)
* Topnav sidebarrel can now be disabled. (`@russell`_)
* Topnav page nav menu can now be disabled. (`@russell`_)

v0.2.7
======
* Add custom nav bar links. (`@russell`_)
  Completes `#34 <https://github.com/ryan-roemer/sphinx-bootstrap-theme/issues/34>`_.
* Fix wrapping of line numbers in code includes. (`@russell`_)
  Fixes `#35 <https://github.com/ryan-roemer/sphinx-bootstrap-theme/issues/35>`_.
* Truncate long page titles in navigation bar. (`@aababilov`_)
  Fixes `#27 <https://github.com/ryan-roemer/sphinx-bootstrap-theme/issues/27>`_.

v0.2.6
======
* Use network path for Bootswatch (`@nail`_)
* Switch from distribute to setuptools. (Suggested by `@thedrow`_)

v0.2.5
======
* Search page styling. (`@russell`_)

v0.2.4
======
* Adjust the max width of field lists. (`@russell`_)
* Update to Bootstrap v2.3.2.
* Navbar search box now uses bootstrap search-query class. (`@russell`_)
* Field-list tables now have an inherited width. (`@russell`_)

v0.2.3
======
* Put navbar within a `container`. (`@inducer`_)
* Add `navbar_site_name` for renaming site nav. tab. (Suggested by `@inducer`_)

v0.2.2
======
* Better literal markup handling for Bootstrap code formatting. (`@russell`_)
* Scroll window when jumping to an anchor. (`@russell`_)

v0.2.1
======
* Fix code styling collision for cross references and inline code blocks.
  (`@russell`_)

v0.2.0
======
* Update to Bootstrap v2.3.1.