@@ -103,6 +103,7 @@
 </ul>
 <ul class="current">
 <li class="toctree-l1 current"><a class="current reference internal" href="">History</a><ul>
+<li class="toctree-l2"><a class="reference internal" href="#current">Current</a></li>
 <li class="toctree-l2"><a class="reference internal" href="#v0-3-2">v0.3.2</a></li>
 <li class="toctree-l2"><a class="reference internal" href="#v0-3-1">v0.3.1</a></li>
 <li class="toctree-l2"><a class="reference internal" href="#v0-3-0">v0.3.0</a></li>
@@ -143,6 +144,7 @@
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Page <b class="caret"></b></a>
   <ul class="dropdown-menu localtoc"><ul>
 <li><a class="reference internal" href="#">History</a><ul>
+<li><a class="reference internal" href="#current">Current</a></li>
 <li><a class="reference internal" href="#v0-3-2">v0.3.2</a></li>
 <li><a class="reference internal" href="#v0-3-1">v0.3.1</a></li>
 <li><a class="reference internal" href="#v0-3-0">v0.3.0</a></li>
@@ -215,6 +217,12 @@
       
   <div class="section" id="history">
 <h1>History<a class="headerlink" href="#history" title="Permalink to this headline">¶</a></h1>
+<div class="section" id="current">
+<h2>Current<a class="headerlink" href="#current" title="Permalink to this headline">¶</a></h2>
+<ul class="simple">
+<li>Preserve HTML inside literal code blocks. (<a class="reference external" href="https://github.com/tristanlins">&#64;tristanlins</a>)</li>
+</ul>
+</div>
 <div class="section" id="v0-3-2">
 <h2>v0.3.2<a class="headerlink" href="#v0-3-2" title="Permalink to this headline">¶</a></h2>
 <ul class="simple">
