@@ -32,6 +32,29 @@ Here's an included example with line numbers.
 .. literalinclude:: ../../sphinx_bootstrap_theme/__init__.py
    :linenos:
 
+It also works with existing Sphinx highlighting:
+
+.. code-block:: html
+
+    <html>
+      <body>Hello World</body>
+    </html>
+
+.. code-block:: python
+
+    def hello():
+        """Greet."""
+        return "Hello World"
+
+.. code-block:: javascript
+
+    /**
+     * Greet.
+     */
+    function hello(): {
+      return "Hello World";
+    }
+
 
 Admonitions
 ===========
