@@ -1,1 +1,1 @@
-Search.setIndex({objects:{"":{MyAnimal:[2,1,1,""],format_exception:[2,0,1,""]}},terms:{all:[3,2],code:[3,0,2,6],illustr:3,queri:6,global:3,dirnam:2,follow:[3,1,2],hierarch:3,content:[3,0],specif:[3,2],friendli:3,those:3,under:3,introduc:3,liter:6,string:[3,2],straightforward:3,fals:3,offlin:3,candid:3,fab:3,join:2,brows:3,level:[3,4,2],button:6,list:[3,0,2,6],html_logo:3,adjust:6,div:3,round:6,pleas:[3,0],direct:[3,2,6],nail:6,second:[4,2],design:3,download:[1,5],further:3,compat:6,index:0,what:3,sub:[3,4,2],html_titl:3,current:3,version:[3,1,2],jqtheme:3,"public":3,can:[3,1,2,6],"__version_full__":2,full:0,navbar_class:[3,6],never:6,etyp:2,here:2,locat:3,along:3,valu:[3,2],box:6,search:[3,0,5,6],source_link_posit:[3,6],bootswatch:[3,6],chang:3,via:[3,6],depart:3,extra:3,apach:3,app:3,html_short_titl:[3,6],html_theme:3,instal:[3,0,1],total:3,mobil:[3,6],cloud:3,from:[3,5,6],michilu:6,theme:[3,0,1,2,6],next:3,websit:3,handler:6,call:3,prev:3,type:[3,2],more:3,cosmo:3,abspath:2,site:[3,0,6],warn:[2,6],indic:[3,0],amelia:3,noconflict:[3,6],none:2,word:6,thedrow:6,work:[3,0,5,6],histori:[0,6],whatev:6,def:2,overrid:[3,6],want:[3,6],templat:3,sourc:[3,2],tab:[3,6],onlin:3,quot:3,brand:6,cur_dir:2,simpl:[4,2],css:[3,5,6],updat:[3,6],max:6,befor:3,datastor:3,demonstr:[4,2],third:[3,4,2],footer:3,bootstrap:[3,0,1,2,6],amazon:3,django:3,issu:3,"switch":[3,5,6],allow:6,navbar_sidebarrel:3,demo_serv:3,grncdr:6,move:5,becaus:3,myanim:2,vari:3,paramet:2,style:[3,5,2,6],thank:6,fit:3,fix:[3,6],globaltoc_depth:[3,6],better:[5,6],window:6,infrastructur:5,hidden:3,non:3,good:3,"return":2,thei:3,handl:6,"break":3,framework:3,now:[3,6],discuss:3,introduct:[3,0],document:[3,0,2,6],name:[3,2],anyth:3,edit:3,drop:3,side:3,truncat:6,mean:3,replac:2,"static":3,logo:[3,6],out:[3,6],network:6,jump:6,footnot:5,rel:3,red:3,multilin:2,kedmenec:6,navig:[3,4,5,6],state:6,oscarcp:6,base:6,put:6,html_theme_path:3,hand:3,reusabl:3,bootstrap_vers:3,navbar:[3,5,6],could:3,traceback:2,place:3,iphon:6,licens:[3,0],first:[3,4,2],origin:6,cell2:2,html_theme_opt:3,render:3,feel:3,bootswatch_them:[3,6],number:[3,2,6],instruct:[0,1],legaci:6,size:3,differ:3,header3:2,top:[3,5],mkdir:3,construct:[3,2],header2:2,attach:3,header1:2,header4:2,toc:[3,0],"final":3,option:[3,5,2,6],templates_path:3,setuptool:6,specifi:3,sidebarrel:6,exactli:3,than:3,png:3,serv:3,wide:3,provid:[3,0],remov:[2,6],jqueri:[3,6],str:2,admonit:[0,2],browser:3,ani:3,bs2:5,bs3:5,packag:3,zyga:6,have:[3,6],tabl:[3,0,2,6],need:[3,5],seem:3,element:[3,6],border:2,navbar_titl:[3,6],built:3,note:[3,0,2,6],mix:3,build:3,which:[3,2],noth:3,sure:3,distribut:6,normal:3,previou:3,most:3,plai:3,"class":[3,2,6],aababilov:6,don:3,url:3,clean:3,navbarextra:[3,6],awesom:3,show:[3,2],"24x24":3,cdn:3,newgen:6,globaltoc_includehidden:[3,6],radic:3,absolut:3,layout:[3,5,6],menu:[3,6],configur:[3,6],activ:3,behind:6,should:3,css_file:3,black:3,local:3,localtoc:5,contribut:[3,0],variou:[3,2],get:[3,6],"__file__":2,pypi:[3,6],format_except:2,cannot:3,"new":[3,6],bar:[3,5,6],enabl:5,cleanli:3,bad:6,stuff:3,integr:3,contain:[3,6],navbar_link:[3,6],view:[3,2],set:[3,0],frame:2,displai:6,see:[3,0,1,2],respons:[3,6],best:3,project:3,someth:3,dropdown:[3,6],sccolbert:6,figur:3,won:3,between:3,"import":[3,2],approach:3,altern:3,extend:3,induc:6,javascript:[3,2],extens:3,entir:3,addit:[3,2],both:3,howev:3,inconsist:5,"_templat":3,mani:3,com:3,compromis:3,point:[3,6],color:[3,6],sphinx_bootstrap_them:3,path:[3,2,6],assum:3,invers:3,much:5,treat:3,basic:0,convert:6,argument:[3,2],my_logo:3,adamcharnock:6,multi:[3,6],look:3,servic:3,"while":3,abov:3,anchor:6,endblock:3,would:3,demo:[3,0],them:[3,2],anim:2,conf:3,develop:[3,0],welcom:3,minim:0,suggest:6,make:[3,6],format:[2,6],cross:6,same:3,python:[2,6],html:[3,2,6],"__version__":2,complet:6,http:3,alert:[2,6],fairli:3,stripe:2,html_static_path:3,stack:2,appropri:3,off:3,markup:6,inherit:6,exampl:[3,0,4,2],thi:[3,0,4,2,6],choos:3,left:3,tim:6,navbar_fixed_top:3,navbar_site_nam:[3,6],exclud:3,align:5,touch:3,sidebar:[0,4,6],web:3,directli:1,also:[3,0],restructuredtext:[3,2],except:2,littl:3,add:[3,2,6],valid:3,kosiakk:6,appli:2,els:3,take:3,real:6,hover:2,mayb:5,grid:2,background:[3,6],recurs:6,like:3,lost:6,arbitrari:3,docutil:2,topnav:6,integ:2,mit:3,"_static":3,page:[0,1,2,3,4,5,6],underli:[3,6],right:5,twitter:3,visibl:6,some:[3,2],intern:3,toctre:3,server:3,librari:3,deploy:6,tooltip:5,unit:3,refer:6,object:2,bold:3,usag:3,post:3,"super":3,actual:[3,6],navbar_pagenav:3,disabl:6,block:[3,6],own:[3,5],within:6,wrap:6,your:[3,1],merg:6,wai:3,cell1:2,cell3:2,support:[3,6],cell4:2,"long":6,custom:[3,0,6],avail:3,width:6,reli:3,includ:[3,2,6],"function":2,media:3,head:[0,4,2],zip:1,form:3,offer:3,tupl:3,bundl:1,regard:3,link:[3,0,6],renam:6,line:[3,2,6],inlin:[2,6],"true":3,viewport:6,row1:2,row2:2,"default":[3,2],wish:0,maximum:2,below:[0,5],limit:2,get_html_theme_path:[3,2],featur:0,creat:[3,2],exist:3,file:3,our:3,pip:3,russel:6,titl:[3,5,6],when:6,detail:0,field:6,other:[3,6],nav:[3,6],futur:[0,5],you:[3,2],nice:3,enhanc:3,sphinx:[3,0,1,2,6],directori:[3,1],collis:6,depth:3,text:2,cssclass:2,scroll:6},objtypes:{"0":"py:function","1":"js:class"},titles:["Bootstrap Theme Demo","Downloads","Examples","Sphinx Bootstrap Theme","Sidebar Examples","Future Work","History"],objnames:{"0":["py","function","Python function"],"1":["js","class","JavaScript class"]},filenames:["index","downloads","examples","README","sidebar","TODO","HISTORY"]})
+Search.setIndex({objects:{"":{MyAnimal:[2,1,1,""],format_exception:[2,0,1,""]}},terms:{all:[3,2],code:[3,0,2,6],illustr:3,queri:6,global:3,dirnam:2,follow:[3,1,2],hierarch:3,content:[3,0],specif:[3,2],friendli:3,those:3,under:3,introduc:3,liter:6,string:[3,2],straightforward:3,fals:3,offlin:3,candid:3,fab:3,join:2,brows:3,level:[3,4,2],button:6,list:[3,0,2,6],html_logo:3,adjust:6,div:3,round:6,pleas:[3,0],direct:[3,2,6],nail:6,second:[4,2],design:3,download:[1,5],further:3,click:3,compat:6,index:0,what:3,navig:[3,4,5,6],html_titl:3,current:[3,6],version:[3,1,2],jqtheme:3,"public":3,can:[3,1,2,6],"__version_full__":2,full:0,navbar_class:[3,6],never:6,etyp:2,fabfil:3,bodi:2,them:[3,2],locat:3,along:3,valu:[3,2],box:6,search:[3,0,5,6],source_link_posit:[3,6],bootswatch:[3,6],chang:3,via:[3,6],depart:3,extra:3,apach:3,app:3,html_short_titl:[3,6],html_theme:3,instal:[3,0,1],total:3,mobil:[3,6],cloud:3,from:[3,5,6],michilu:6,theme:[3,0,1,2,6],next:3,websit:3,handler:6,call:3,prev:3,type:[3,2],more:3,cosmo:3,reusabl:3,abspath:2,enhanc:3,warn:[2,6],indic:[3,0],amelia:3,noconflict:[3,6],none:2,word:6,thedrow:6,work:[3,0,5,2,6],histori:[0,6],whatev:6,def:2,overrid:[3,6],want:[3,6],templat:3,sourc:[3,2],tab:[3,6],onlin:3,quot:3,brand:6,cur_dir:2,simpl:[4,2],css:[3,5,6],updat:[3,6],max:6,befor:3,datastor:3,demonstr:[4,2],third:[3,4,2],footer:3,bootstrap:[3,0,1,2,6],amazon:3,greet:2,django:3,issu:3,"switch":[3,5,6],allow:6,navbar_sidebarrel:3,demo_serv:3,grncdr:6,move:5,becaus:3,myanim:2,vari:3,paramet:2,style:[3,5,2,6],thank:6,fit:3,fix:[3,6],globaltoc_depth:[3,6],better:[5,6],window:6,infrastructur:5,hidden:3,non:3,good:3,"return":2,thei:3,handl:6,"break":3,framework:3,now:[3,6],discuss:3,introduct:[3,0],document:[3,0,2,6],name:[3,2],anyth:3,edit:3,drop:3,side:3,truncat:6,mean:3,replac:2,"static":3,logo:[3,6],out:[3,6],network:6,jump:6,footnot:5,rel:3,red:3,multilin:2,kedmenec:6,insid:6,state:6,oscarcp:6,base:[3,6],put:6,html_theme_path:3,alert:[2,6],prefac:3,bootstrap_vers:3,navbar:[3,5,6],could:3,traceback:2,place:3,iphon:6,licens:[3,0],first:[3,4,2],origin:6,cell2:2,html_theme_opt:3,render:3,feel:3,bootswatch_them:[3,6],number:[3,2,6],instruct:[0,1],legaci:6,open:3,size:3,differ:3,header3:2,top:[3,5],mkdir:3,construct:[3,2],header2:2,attach:3,header1:2,header4:2,toc:[3,0],"final":3,option:[3,5,2,6],templates_path:3,setuptool:6,specifi:3,sidebarrel:6,exactli:3,than:3,png:3,serv:3,wide:3,provid:[3,0],remov:[2,6],jqueri:[3,6],str:2,admonit:[0,2],browser:3,ani:3,bs2:5,bs3:5,packag:3,zyga:6,have:[3,6],tabl:[3,0,2,6],need:[3,5],seem:3,element:[3,6],border:2,navbar_titl:[3,6],built:3,note:[3,0,2,6],mix:3,build:3,which:[3,2],noth:3,sure:3,distribut:6,normal:3,previou:3,most:3,plai:3,"class":[3,2,6],sub:[3,4,2],aababilov:6,don:3,url:3,doe:3,clean:3,awesom:3,show:[3,2],"24x24":3,cdn:3,newgen:6,globaltoc_includehidden:[3,6],radic:3,absolut:3,layout:[3,5,6],navbar_site_nam:[3,6],menu:[3,6],configur:[3,6],activ:3,behind:6,should:3,css_file:3,black:3,local:3,localtoc:5,contribut:[3,0],variou:[3,2],get:[3,6],"__file__":2,pypi:[3,6],format_except:2,cannot:3,"new":[3,6],bar:[3,5,6],enabl:5,cleanli:3,bad:6,stuff:3,integr:3,contain:[3,6],navbar_link:[3,6],valid:3,view:[3,2],set:[3,0],frame:2,displai:6,see:[3,0,1,2],respons:[3,6],best:3,project:3,someth:3,dropdown:[3,6],sccolbert:6,figur:3,won:3,between:3,"import":[3,2],approach:3,altern:3,extend:3,induc:6,javascript:[3,2],extens:3,entir:3,here:2,addit:[3,2],both:3,howev:3,inconsist:5,"_templat":3,mani:3,com:3,compromis:3,point:[3,6],color:[3,6],sphinx_bootstrap_them:3,path:[3,2,6],assum:3,invers:3,much:5,treat:3,basic:0,convert:6,argument:[3,2],my_logo:3,adamcharnock:6,multi:[3,6],look:3,servic:3,"while":3,abov:3,anchor:6,endblock:3,would:3,demo:[3,0],site:[3,0,6],anim:2,conf:3,develop:[3,0],welcom:3,minim:0,suggest:6,make:[3,6],format:[2,6],cross:6,same:3,python:[2,6],html:[3,2,6],"__version__":2,complet:6,http:3,hand:3,fairli:3,stripe:2,html_static_path:3,stack:2,task:3,off:3,markup:6,inherit:6,exampl:[3,0,4,2],thi:[3,0,4,2,6],choos:3,left:3,tim:6,navbar_fixed_top:3,just:3,exclud:3,align:5,touch:3,sidebar:[0,4,6],web:3,directli:1,also:[3,0,2],restructuredtext:[3,2],except:2,littl:3,add:[3,2,6],other:[3,6],kosiakk:6,appli:2,els:3,take:3,real:[3,6],hover:2,mayb:5,preserv:6,agnost:3,grid:2,background:[3,6],world:2,recurs:6,like:3,lost:6,arbitrari:3,docutil:2,topnav:6,integ:2,mit:3,"_static":3,page:[0,1,2,3,4,5,6],underli:[3,6],right:5,twitter:3,visibl:6,some:[3,2],intern:3,toctre:3,server:3,librari:3,deploy:6,tooltip:5,unit:3,refer:[3,6],machin:3,object:2,bold:3,usag:3,repositori:3,post:3,"super":3,actual:[3,6],navbar_pagenav:3,tristanlin:6,disabl:6,block:[3,6],own:[3,5],within:6,appropri:3,wrap:6,your:[3,1],merg:6,wai:3,cell1:2,cell3:2,support:[3,6],cell4:2,"long":6,custom:[3,0,6],avail:3,width:6,reli:3,includ:[3,2,6],"function":2,media:3,head:[0,4,2],zip:1,form:3,offer:3,tupl:3,bundl:1,regard:3,link:[3,0,6],renam:6,line:[3,2,6],inlin:[2,6],"true":3,viewport:6,row1:2,row2:2,"default":[3,2],wish:0,maximum:2,below:[0,5],limit:2,highlight:2,get_html_theme_path:[3,2],featur:0,creat:[3,2],exist:[3,2],file:3,our:3,pip:3,russel:6,titl:[3,5,6],when:6,detail:[3,0],field:6,navbarextra:[3,6],nav:[3,6],futur:[0,5],you:[3,2],nice:3,sphinx:[3,0,1,2,6],directori:[3,1],collis:6,scroll:6,depth:3,text:2,cssclass:2,hello:2},objtypes:{"0":"py:function","1":"js:class"},titles:["Bootstrap Theme Demo","Downloads","Examples","Sphinx Bootstrap Theme","Sidebar Examples","Future Work","History"],objnames:{"0":["py","function","Python function"],"1":["js","class","JavaScript class"]},filenames:["index","downloads","examples","README","sidebar","TODO","HISTORY"]})
